--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
     <img src="./multimedia/bandera sueca.webp" alt="" height="50%" width="50%">
     <hr>
     <a href="./html/form.html" style="color: rgb(172, 17, 17);"><h2><strong>→Ir a formulario</strong></h2></a>
+    <a href="./html/list.html" style="color: rgb(172, 17, 17);"><h2><strong>→Ir a listas</strong></h2></a>
+    <a href="./html/table.html" style="color: rgb(172, 17, 17);"><h2><strong>→Ir a tablas</strong></h2></a>
+</body>
 </body>
 </html>
