--- a/html/sent.html
+++ b/html/sent.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enviado</title>
+    <title>Enviadoo</title>
 </head>
 <body>
     <h1 style="color: rgb(6, 6, 92);">Respuestas enviadas con éxito</h1>
