--- a/html/table.html
+++ b/html/table.html
@@ -25,6 +25,10 @@
             <td>Venezuela</td>
             <td>0 goles</td>
         </tr>
+        <tr>
+            <td>México</td>
+            <td>2 goles</td>
+        </tr>
     </table>
 </body>
 </html>
